--- a/front/src/App.css
+++ b/front/src/App.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .mainBackground {
-    background-color: rgb(27, 25, 25);
+    background-color: #9c88ff;
 }
 nav{
     width: 100%;
